# learn-autogen

./: .env.example  .gitignore  CLAUDE.md  main.py  pyproject.toml  test_factory.py
examples/: calculator_demo.py
notebooks/: README.md
notebooks/class/1-introduction/: first_agent.ipynb
notebooks/personal/: async_autogen.ipynb
notebooks/personal/1-async/: async_autogen.ipynb
notebooks/personal/2-agentchat-fundamentals/: model_clients.ipynb
notebooks/personal/3-modular-design/: factory_demo.ipynb
notebooks/shared/: notebook_utils.py
src/agents/: builder.py  factory.py
src/config/: settings.py
src/tools/: calculator.py
src/utils/: async_examples.py  error_handling.py
