[project]
name = "learn-autogen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "autogen-agentchat>=0.6.2",
    "autogen-core>=0.6.2",
    "autogen-ext>=0.6.2",
    "dotenv>=0.9.9",
    "openai>=1.93.0",
    "tiktoken>=0.9.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]
